# incrediblerust.github.io

./: .gitignore  .nojekyll  CACHE_REFRESH_GUIDE.md  Cargo.toml  DEPLOY_FIX_GUIDE.md  GENERATOR_README.md  GITHUB_PAGES_SETUP.md  Gemfile  LICENSE  MIGRATION_SUMMARY.md  README.md  TAREFAS_MODERNIZACAO_WEB_DESIGN_2025.md  _config.yml  about.md  build.sh  index.md  manifest.json  offline.html  sw.js  test-routes.sh  verify-setup.sh
.github/workflows/: jekyll-gh-pages.yml  rust-pages.yml
_data/: lessons.yml  translations.yml
_layouts/: default.html  lesson.html
_lessons/: blockchain-development.md  cargo.md  data-types.md  distributed-systems.md  hello-world.md  installation.md  machine-learning.md  networking-fundamentals.md  variables.md
_lessons_es/: cargo.md  hola-mundo.md  instalacion.md  variables.md
_lessons_pt/: cargo.md  instalacao.md  ola-mundo.md  tipos-de-dados.md  variaveis.md
_plugins/: ruby3_compat.rb
assets/css/: style.css  syntax.css
es/: about.md  index.md
es/lessons/: index.md
lessons/: index.md
lessons/control-flow/: index.md
lessons/enums/: index.md
lessons/error-handling/: index.md
lessons/functions/: index.md
lessons/lifetimes/: index.md
lessons/modules/: index.md
lessons/references-borrowing/: index.md
lessons/slices/: index.md
lessons/structs/: index.md
lessons/understanding-ownership/: index.md
pt/: about.md  index.md
pt/lessons/: index.md
pt/lessons/functions/: index.md
src/: config.rs  content.rs  generator.rs  main.rs  templates.rs  utils.rs
templates/: base.html  default.html  lesson.html
(+3 files in other folders)
