[package]
name = "incrediblerust-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.3"
regex = "1.5"
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9"
tera = "1.19"
gray_matter = "0.2"
url = "2.3"
slug = "0.1"
html-escape = "0.2"